[JSC] Fix ArraySpeciesCreate to return a new Array when the given object is not an array Error found in the following Test262 tests:

- test/built-ins/Array/prototype/slice/create-non-array-invalid-len.js
- test/built-ins/Array/prototype/slice/create-proxied-array-invalid-len.js
- test/built-ins/Array/prototype/splice/create-species-undef-invalid-len.js

The ArraySpeciesCreate should throw a RangeError with non-Array custom objects
presenting a length > 2**32-1
https://bugs.webkit.org/show_bug.cgi?id=185476

Patch by Leo Balter <leonardo.balter@gmail.com> on 2018-05-09
Reviewed by Yusuke Suzuki.

* runtime/ArrayPrototype.cpp:

Canonical link: https://commits.webkit.org/200954@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231572 268f45cc-cd09-0410-ab3c-d52691b4dbfc